Commit temporal para corregir errores.

--- a/src/app/Components/apps/apps.component.html
+++ b/src/app/Components/apps/apps.component.html
@@ -1,12 +1,12 @@
 <div class="container-fluir mt-16 mb-16 fondo">
     <app-nav></app-nav>
-    <h1 class="mt-16">
+    <h1 class="mt-16 ml-9">
         {{"APPS.TITLE" | translate}}
     </h1>
     <div class="row">
         <div class="col-md-4 mt-16">
             <article>
-                <p>
+                <p class="align">
                     {{"APPS.PARAGRAPH.0" | translate}}
                 </p>
             </article>
