--- a/src/app/Components/coaching/coaching.component.html
+++ b/src/app/Components/coaching/coaching.component.html
@@ -6,7 +6,7 @@
   <div class="row">
     <div class="col-md-4 mt-16">
       <article> 
-        <p>
+        <p class="align">
           {{"DIGITAL-PROJECTS.PARAGRAPH.0" | translate}}
         </p>
       </article>
@@ -20,7 +20,6 @@
     </div>
     <div class="col-md-4 mt-16 mb-16">
       <article>
-        <hr>
         <img src="../../../assets/img/proyecDigi.svg" class="img1 pequeño" alt="Proyectos Digitales">
       </article>
     </div>
