--- a/src/app/Components/comerce/comerce.component.html
+++ b/src/app/Components/comerce/comerce.component.html
@@ -1,12 +1,12 @@
 <div class="container-fluid mt-16 fondo">
     <app-nav></app-nav>
-    <h1 class="mt-16">
+    <h1 class="mt-16 ml-9">
         {{"COMMERCE.TITLE" | translate}}    
     </h1>
     <div class="row">
         <div class="col-md-4 mt-16">
             <article>
-                <p> 
+                <p class="align"> 
                     {{"COMMERCE.PARAGRAPH.0" | translate}}
                 </p>    
             </article>
@@ -20,7 +20,7 @@
         </div>
         <div class="col-md-4">
             <article>
-                <img src="../../../assets/img/ecom.png" class="img1 pequeño" alt="e-commerce">    
+                <img src="../../../assets/img/ecom.png" class="img1 pequeño mt-9 ml-5" alt="e-commerce">    
             </article>
         </div>   
     </div>
