--- a/src/app/Components/nosotros/nosotros.component.html
+++ b/src/app/Components/nosotros/nosotros.component.html
@@ -47,12 +47,45 @@
       </div>
     </div>
 </div>
-</div>
-<div class="container">
-  <div class="row">
-    <div class="col-md-12">
+<div class="row equipo mt-16">
+  <!-- inicio columna 1 de fila 1 -->
+  <div class="col-md-4">
+    <!-- inicio card de Roger. -->
+    <div class="card tarjeta">
+      <img class="card-img" src="../../../assets/img/roger.png"   alt="Roger.">
+      <div class="card-img-overlay">
+        <h5 class="card-title">{{"WE.PERSON-1" | translate}}</h5>
+        <p class="card-text"> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officia, inventore. 
+        Tenetur deleniti similique eveniet fugiat exercitationem quas repellat.</p>
+        <a href="https://bo.linkedin.com/in/rogerprado" target="_blank"></a>
+      </div>
     </div>
   </div>
+  <!-- inicio columna 2 de fila 1 -->
+  <div class="col-md-4">
+    <!-- inicio card de Pedro. -->
+    <div class="card tarjeta">
+      <img class="card-img" src="../../../assets/img/pedro.png"  alt="Pedro.">
+      <div class="card-img-overlay">
+        <h5 class="card-title">{{"WE.PERSON-2" | translate}}</h5>
+        <p class="card-text"> {{"WE.PERSON-2_DESCRIPTION" | translate}} </p>
+        <a href="https://uy.linkedin.com/in/gezn" target="_blank" ></a>
+      </div>
+    </div>
+  </div>
+  <!-- inicio columna 3 de fila 1 -->
+  <div class="col-md-4">
+    <!-- inicio card de Milenka. -->
+      <div  class="card tarjeta">
+        <img class="card-img" src="../../../assets/img/mile.jpg" alt="Milenka.">
+        <div class="card-img-overlay"> 
+          <h5 class="card-title">{{"WE.PERSON-3" | translate}}</h5>
+          <p class="card-text-milenka"> {{"WE.PERSON-3_DESCRIPTION" | translate}} </p>
+          <a href="https://uy.linkedin.com/in/milenka-e-pereira-648a0942/" target="_blank" ></a>
+        </div>
+      </div>
+  </div>
+</div>
 </div>
 <div class="mb-16">
 </div>
