--- a/src/app/Components/turismo/turismo.component.html
+++ b/src/app/Components/turismo/turismo.component.html
@@ -6,7 +6,7 @@
     <div class="row">
         <div class="col-md-4 mt-16">
             <article>
-                <p> 
+                <p class="align"> 
                     {{"SIGHTSEEING.PARAGRAPH.0" | translate}}
                 </p>    
             </article>
@@ -20,7 +20,7 @@
         </div>
         <div class="col-md-4">
             <article>
-                <img src="../../../assets/img/turismovirt.svg" class="img1 pequeño" alt="Turismo Virtual">    
+                <img src="../../../assets/img/turismovirt.svg" class="img1 pequeño mt-8 ml-8" alt="Turismo Virtual">    
             </article>
         </div>   
     </div>
