--- a/src/app/Components/blockchain/blockchain.component.html
+++ b/src/app/Components/blockchain/blockchain.component.html
@@ -6,7 +6,7 @@
     <div class="row">
         <div class="col-md-4 mt-16">
             <article>
-                <p> 
+                <p class="align"> 
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                     Culpa quibusdam nemo maxime ipsa ab, corrupti inventore 
                     dolore pariatur voluptates, quae mollitia quaerat tenetur 
@@ -26,7 +26,7 @@
         </div>
         <div class="col-md-4 mt-12">
             <article>
-                <img src="../../../assets/img/keta.svg" class="img1 pequeño" alt="marketing exponencial">    
+                <img src="../../../assets/img/blockchain.jpg" class="img1 pequeño" alt="marketing exponencial">    
             </article>
         </div>   
     </div>
