--- a/src/app/Components/developers/developers.component.html
+++ b/src/app/Components/developers/developers.component.html
@@ -6,7 +6,7 @@
     <div class="row">
         <div class="col-md-4 mt-16">
             <article>
-                <p> 
+                <p class="align"> 
                     {{"DEVELOPERS.PARAGRAPH.0" | translate}}
                 </p>    
             </article>
