--- a/src/app/Components/experiencia/experiencia.component.html
+++ b/src/app/Components/experiencia/experiencia.component.html
@@ -74,96 +74,78 @@
     </div>
   </div>
     <!-- ========== End Carrusel de productos ========== -->
+
+    
     <!-- Inicio container clientes -->
   <div class="container clientes mt-16 mb-16">
     <!-- h1 Nuestros Clientes -->
     <h1 class="text-center mb-16 mt-16" id="clientes">
       Confian en Nosotros
     </h1>
-    <!-- Inicio 1 Fila -->
-      <div class="row justify-content-md-center">
-    <!-- Inicio columna 1 de fila 1 -->
-        <div class="col-md-3 justify-content-center d-flex">
-          <div class="marco-ext-h">
-            <a href="https://www.derechosdigitales.org/" target="_blank">
-              <img src="../../../assets/img/Logo-Derechos-Digitales-01.png" class="imagen mx-auto d-block efecto"  alt="">
-            </a>        
-          </div>
-        </div>
-        <!-- Inicio de columna 2 de fila 1 -->
-        <div class="col-md-3 justify-content-center d-flex">
-          <div class="marco-ext-h">
-            <a href="https://www.bisa.com/" target="_blank">
-              <img src="../../../assets/img/bancobisa.png" class="mx-auto d-block efecto"  alt="">
-            </a>        
-          </div>
-        </div>
-        <!-- Inicio de columna 3 de fila 1 -->
-        <div class="col-md-3 justify-content-center d-flex">
-          <div class="marco-ext-h">
-            <a href="https://www.lbc.bo/" target="_blank">
-              <img src="../../../assets/img/boliviana.png" class="mx-auto d-block efecto"  alt="">
-            </a>        
-          </div>
-        </div>
-        <!-- Inicio de columna 4 de fila 1 -->
-        <div class="col-md-3 justify-content-center d-flex">
-          <div class="marco-ext-h">
-            <a href="https://www.facebook.com/CCMSFLP/" target="_blank">
-              <img src="../../../assets/img/sanfrancisco.jpg" class="imagen mx-auto d-block efecto"  alt="">
-            </a>        
-          </div>
-        </div>
+    <!-- Inicio section div flex -->
+    <section class="flex" >
+      <!-- Inicio 1 logo de flexbox -->
+      <div class="marco-ext-h logo">
+        <a href="https://www.derechosdigitales.org/" target="_blank">
+          <img src="../../../assets/img/Logo-Derechos-Digitales-01.png" class="efecto"  alt="Derechos Digitales" id="imagen1">
+        </a>        
       </div>
-      <!-- Inicio de fila 2 -->
-      <div class="row justify-content-md-center">
-        <!-- Inicio columna 1 de fila 2 -->
-        <div class="col-md-3 justify-content-center d-flex">
-          <div class="marco-ext-h">
-            <a href="https://www.comunicacion.gob.bo/" target="_blank">
-              <img src="../../../assets/img/mincom_blanco.png" class="mx-auto d-block efecto"  alt="">
-            </a>        
-          </div>
-        </div>
+      <!-- Inicio de 2 logo de flexbox -->
+      <div class="marco-ext-h logo">
+        <a href="https://www.bisa.com/" target="_blank">
+          <img src="../../../assets/img/bancobisa.png" class="efecto"  alt="Banco Bisa" id="imagen2">
+        </a>        
       </div>
-    </div>
+     <!-- Inicio de 3 logo de flexbox -->
+      <div class="marco-ext-h logo">
+        <a href="https://www.lbc.bo/" target="_blank">
+          <img src="../../../assets/img/boliviana.png" class="efecto"  alt="La Boliviana Ciacruz" id="imagen3">
+        </a>        
+      </div>
+     <!-- Inicio de 4 logo de flexbox -->
+      <div class="marco-ext-h logo">
+        <a href="https://www.facebook.com/CCMSFLP/" target="_blank">
+          <img src="../../../assets/img/sanfrancisco.jpg" class="efecto"  alt="San Francisco" id="imagen4">
+        </a>
+      </div>        
+      <!-- Inicio de 5 logo de flexbox -->
+      <div class="marco-ext-h logo">
+        <a href="https://www.comunicacion.gob.bo/" target="_blank">
+          <img src="../../../assets/img/mincom_blanco.png" class="efecto"  alt="Ministerio Comunicación Bolivia" id="imagen5">
+        </a>        
+      </div>
+    </section>
+  </div>    
+    
 <!-- ========== Start Container Logos aliados ========== -->
-  <div class="container aliados mt-16 mb-16">
-    <!-- H1 organizaciones amigas -->
+  <div class="container aliados mt-16">
+    <!-- h1 organizaciones amigas -->
     <h1 class="text-center mb-16">Aliados </h1>
-    <!-- Inicio de fila 1 -->
-    <div class="row justify-content-center d-flex">
-      <!-- Inicio de columna 1 de fila 1 -->
-      <div class="col-md-3 marco-ext2">
-        <div>
+    <!-- Inicio de div flex de aliados -->
+      <section class="flex">
+        <!-- Inicio de logo 1 de aliados-->
+        <div class="marco-ext2 logo2">
           <a href="https://martadero.org/quienes-somos/" target="_blank">
-            <img src="../../../assets/img/marca-mARTadero-escala-grises-para-fondo-oscuro.png" class="imagen mx-auto d-block efecto"  alt="">
+            <img src="../../../assets/img/marca-mARTadero-escala-grises-para-fondo-oscuro.png" class="efecto"  alt="Martadero" id="imagenesaliados1">
           </a>        
         </div>
-      </div>
-      <!-- Inicio de columna 2 de fila 1 -->
-      <div class="col-md-3 marco-ext2">
-        <div>
+        <!-- Inicio de logo 2 de aliados -->
+        <div class="marco-ext2 logo2">
           <a href="https://openlab.ec/presentacion" target="_blank">
-            <img src="../../../assets/img/Logo_Openlab3n.svg" class="imagen mx-auto d-block efecto" alt="">
+            <img src="../../../assets/img/Logo_Openlab3n.svg" class="efecto" alt="Openlab Ec" id="imagenesaliados2">
           </a>                   
         </div>
-      </div>
-      <!-- Inicio de columna 3 de fila 1 -->
-      <div class="col-md-3 marco-ext2">
-        <div>
-          <img src="../../../assets/img/lapazsw.svg" class="imagen mx-auto d-block efecto"  alt="">        
+        <!-- Inicio de logo 3 de aliados-->
+        <div class="marco-ext2 logo2">
+          <img src="../../../assets/img/lapazsw.svg" class="efecto"  alt="La Paz Weekend" id="imagenesaliados3">        
         </div>
-      </div>
-      <!-- Inicio de columna 4 de fila 1 -->
-      <div class="col-md-3 marco-ext2">
-        <div>
-          <img src="../../../assets/img/asoc4.jpg" class="imagen mx-auto d-block efecto" alt="">        
-        </div>
-      </div>    
+        <!-- Inicio de columna 4 de fila 1 -->
+        <div class="marco-ext2 logo2">
+          <img src="../../../assets/img/asoc4.jpg" class="efecto" alt="Illa" id="imagenesaliados4">         
+        </div>    
+      </section>
     </div>
   </div>
-</div>
 <!-- ========== End Logos aliados ========== --> 
 <div class="mb-16">
 </div>     
