Commit temporal para que Iván importe mis cambios a su rama

--- a/src/app/Components/apps/apps.component.html
+++ b/src/app/Components/apps/apps.component.html
@@ -1,20 +1,20 @@
 <div class="container-fluir mt-16 mb-16 fondo">
     <app-nav></app-nav>
     <h1 class="mt-16 ml-9">
-        {{"APPS.TITLE" | translate}}
+        {{"apps.title" | translate}}
     </h1>
     <div class="row">
         <div class="col-md-4 mt-16">
             <article>
                 <p class="align">
-                    {{"APPS.PARAGRAPH.0" | translate}}
+                    {{"apps.paragraph.0" | translate}}
                 </p>
             </article>
         </div>
         <div class="col-md-4 mt-16">
             <article>
                 <p>
-                    {{"APPS.PARAGRAPH.1" | translate}}
+                    {{"apps.paragraph.1" | translate}}
                 </p>
             </article>
         </div>
