--- a/src/app/Components/arte/arte.component.html
+++ b/src/app/Components/arte/arte.component.html
@@ -1,20 +1,20 @@
 <div class="container-fluid mt-16 mb-16 fondo">
     <app-nav></app-nav>
     <h1 class="ml-9 mt-16">
-        {{"DIGITAL-ART.TITLE" | translate}}    
+        {{"digital-art.title" | translate}}    
     </h1>
     <div class="row">
         <div class="col-md-4 mt-16">
             <article>
                 <p class="align"> 
-                    {{"DIGITAL-ART.PARAGRAPH.0" | translate}}
+                    {{"digital-art.paragraph.0" | translate}}
                 </p>    
             </article>
         </div>
         <div class="col-md-4 mt-16">
             <article>
                 <p> 
-                    {{"DIGITAL-ART.PARAGRAPH.1" | translate}}
+                    {{"digital-art.paragraph.1" | translate}}
                 </p>    
             </article>
         </div>
