--- a/src/app/Components/comerce/comerce.component.html
+++ b/src/app/Components/comerce/comerce.component.html
@@ -1,20 +1,20 @@
 <div class="container-fluid mt-16 fondo">
     <app-nav></app-nav>
     <h1 class="mt-16 ml-9">
-        {{"COMMERCE.TITLE" | translate}}    
+        {{"commerce.title" | translate}}    
     </h1>
     <div class="row">
         <div class="col-md-4 mt-16">
             <article>
                 <p class="align"> 
-                    {{"COMMERCE.PARAGRAPH.0" | translate}}
+                    {{"commerce.paragraph.0" | translate}}
                 </p>    
             </article>
         </div>
         <div class="col-md-4 mt-16">
             <article>
                 <p> 
-                    {{"COMMERCE.PARAGRAPH.1" | translate}}
+                    {{"commerce.paragraph.1" | translate}}
                 </p>    
             </article>
         </div>
