--- a/src/app/Components/marketing/marketing.component.html
+++ b/src/app/Components/marketing/marketing.component.html
@@ -1,13 +1,13 @@
 <div class="container-fluid mt-16 mb-16 fondo">
     <app-nav></app-nav>
     <h1 class="ml-16 mt-16">
-        {{"MARKETING.TITLE" | translate}}    
+        {{"marketing.title" | translate}}    
     </h1>
     <div class="row">
         <div class="col-md-4 mt-16">
             <article>
                 <p class="align"> 
-                    {{"MARKETING.PARAGRAPH" | translate}}
+                    {{"marketing.paragraph" | translate}}
                 </p>    
             </article>
         </div>
@@ -15,19 +15,19 @@
             <article>
                 <ul class="align">
                     <li>
-                        {{"MARKETING.LIST" | translate}}
+                        {{"marketing.list" | translate}}
                     </li>
                     <li>
-                        {{"MARKETING.LIST-1" | translate}}
+                        {{"marketing.list-1" | translate}}
                     </li>
                     <li>
-                        {{"MARKETING.LIST-2" | translate}}
+                        {{"marketing.list-2" | translate}}
                     </li>
                     <li>
-                        {{"MARKETING.LIST-3" | translate}}
+                        {{"marketing.list-3" | translate}}
                     </li>
                     <li>
-                        {{"MARKETING.LIST-4" | translate}}
+                        {{"marketing.list-4" | translate}}
                     </li>
                 </ul>
                    
