--- a/src/app/Components/services/services.component.html
+++ b/src/app/Components/services/services.component.html
@@ -1,13 +1,13 @@
 <div class="container-fluid mt-16 mb-16 fondo">
     <app-nav></app-nav>
     <h1 class="ml-14 mt-16">
-        {{"SERVICES.TITLE" | translate}}
+        {{"services.title" | translate}}
     </h1>
     <div class="row">
         <div class="col-md-6 mt-16">
             <article class="ml-16">
                 <p>
-                    {{"SERVICES.PARAGRAPH" | translate}}
+                    {{"services.paragraph" | translate}}
                 </p>
             </article>
         </div>
