--- a/src/app/Components/experiencia/experiencia.component.html
+++ b/src/app/Components/experiencia/experiencia.component.html
@@ -77,13 +77,11 @@
 
     
     <!-- Inicio container clientes -->
-  <div class="container clientes mt-16 mb-16">
+  <div class="container clientes">
     <!-- h1 Nuestros Clientes -->
-    <h1 class="text-center mb-16 mt-16" id="clientes">
-      Confian en Nosotros
-    </h1>
+    <h2 class="text-center mb-10">Confian en Nosotros</h2>
     <!-- Inicio section div flex -->
-    <section class="flex" >
+    <section class="d-flex justify-content-center" >
       <!-- Inicio 1 logo de flexbox -->
       <div class="marco-ext-h logo">
         <a href="https://www.derechosdigitales.org/" target="_blank">
@@ -99,53 +97,65 @@
      <!-- Inicio de 3 logo de flexbox -->
       <div class="marco-ext-h logo">
         <a href="https://www.lbc.bo/" target="_blank">
-          <img src="../../../assets/img/boliviana.png" class="efecto"  alt="La Boliviana Ciacruz" id="imagen3">
+          <img src="../../../assets/img/lbc-blanco.png" class="efecto"  alt="La Boliviana Ciacruz" id="imagen3">
         </a>        
       </div>
      <!-- Inicio de 4 logo de flexbox -->
-      <div class="marco-ext-h logo">
-        <a href="https://www.facebook.com/CCMSFLP/" target="_blank">
-          <img src="../../../assets/img/sanfrancisco.jpg" class="efecto"  alt="San Francisco" id="imagen4">
-        </a>
+      <div class="marco-ext-h logo d-flex">
+        <div class="align-self-center">
+          <a href="https://www.facebook.com/CCMSFLP/" target="_blank">
+            <img src="../../../assets/img/sanfrancisco.jpg" class="efecto"  alt="San Francisco" id="imagen4">
+          </a>
+        </div>
       </div>        
       <!-- Inicio de 5 logo de flexbox -->
-      <div class="marco-ext-h logo">
-        <a href="https://www.comunicacion.gob.bo/" target="_blank">
-          <img src="../../../assets/img/mincom_blanco.png" class="efecto"  alt="Ministerio Comunicación Bolivia" id="imagen5">
-        </a>        
+      <div class="marco-ext-h logo d-flex">
+        <div class="align-self-center">
+          <a href="https://www.comunicacion.gob.bo/" target="_blank">
+            <img src="../../../assets/img/mincom_blanco.png" class="efecto"  alt="Ministerio Comunicación Bolivia" id="imagen5">
+          </a> 
+        </div>
       </div>
     </section>
   </div>    
     
 <!-- ========== Start Container Logos aliados ========== -->
-  <div class="container aliados mt-16">
+  <div class="container aliados">
     <!-- h1 organizaciones amigas -->
-    <h1 class="text-center mb-16">Aliados </h1>
+    <h2 class="text-center mb-10">Aliados </h2>
     <!-- Inicio de div flex de aliados -->
-      <section class="flex">
+      <section class="d-flex justify-content-center">
         <!-- Inicio de logo 1 de aliados-->
-        <div class="marco-ext2 logo2">
-          <a href="https://martadero.org/quienes-somos/" target="_blank">
-            <img src="../../../assets/img/marca-mARTadero-escala-grises-para-fondo-oscuro.png" class="efecto"  alt="Martadero" id="imagenesaliados1">
-          </a>        
+        <div class="marco-ext2 logo2 d-flex">
+          <div class="align-self-center">
+            <a href="https://martadero.org/quienes-somos/" target="_blank">
+              <img src="../../../assets/img/marca-mARTadero-escala-grises-para-fondo-oscuro.png" class="efecto"  alt="Martadero" id="imagenesaliados1">
+            </a>
+          </div>        
         </div>
         <!-- Inicio de logo 2 de aliados -->
-        <div class="marco-ext2 logo2">
+        <div class="marco-ext2 logo2 d-flex">
+          <div class="align-self-center">
           <a href="https://openlab.ec/presentacion" target="_blank">
             <img src="../../../assets/img/Logo_Openlab3n.svg" class="efecto" alt="Openlab Ec" id="imagenesaliados2">
-          </a>                   
+          </a>   
+          </div>                
         </div>
         <!-- Inicio de logo 3 de aliados-->
-        <div class="marco-ext2 logo2">
-          <img src="../../../assets/img/lapazsw.svg" class="efecto"  alt="La Paz Weekend" id="imagenesaliados3">        
+        <div class="marco-ext2 logo2 d-flex">
+          <div class="align-self-center">
+            <img src="../../../assets/img/lapazsw.svg" class="efecto"  alt="La Paz Weekend" id="imagenesaliados3">        
+          </div>
         </div>
         <!-- Inicio de columna 4 de fila 1 -->
-        <div class="marco-ext2 logo2">
-          <img src="../../../assets/img/asoc4.jpg" class="efecto" alt="Illa" id="imagenesaliados4">         
-        </div>    
+        <div class="marco-ext2 logo2 d-flex">
+          <div class="align-self-center">
+            <img src="../../../assets/img/asoc4.jpg" class="efecto" alt="Illa" id="imagenesaliados4">         
+          </div>    
+        </div>
       </section>
     </div>
   </div>
 <!-- ========== End Logos aliados ========== --> 
 
-<app-footer></app-footer>
+<app-footer></app-footer> 
