--- a/src/app/Components/nosotros/nosotros.component.css
+++ b/src/app/Components/nosotros/nosotros.component.css
@@ -2,7 +2,7 @@
   background-image: url("../../../assets/img/background-3883181_1920.jpg");
   background-size: cover;
   position: relative;
-  height: 160vh;  
+  background-attachment: fixed;
 }
 
 .container-nosotros::before {
